--- a/main.css
+++ b/main.css
@@ -207,7 +207,7 @@ footer {
   .top-section img {
     width: 285px;
     height: 280px;
-    border-radius: 0%;
+    border-radius: 10px 0px 0px 10px;
   }
 
   .first-paragraph {
