Border radius on img for desktop fixed at 5%

--- a/main.css
+++ b/main.css
@@ -208,7 +208,7 @@ footer {
   .top-section img {
     width: 285px;
     height: 280px;
-    border-radius: 0%;
+    border-radius: 5% 0% 0% 5%;
   }
 
   .first-paragraph {
