--- a/main.css
+++ b/main.css
@@ -195,7 +195,8 @@ footer {
     min-height: 100vh;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     width: 730px;
     height: 280px;
   }
